5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1649_1053.log
== TEST (2019-04-05 18:43:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
if (nome==cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("<nome> nao eh patrono do Harry Potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (nome==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:44:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
patrono=cervo
if (nome==patrono):
	print("cervo eh patrono do Harry Potter")
else:
	print("<nome> nao eh patrono do Harry Potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    patrono=cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:46:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
patrono=cervo
if (nome==patrono):
	print("cervo eh patrono do Harry Potter")
else:
	print("<nome> nao eh patrono do Harry Potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    patrono=cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:46:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
patrono = cervo
if (nome==patrono):
	print("cervo eh patrono do Harry Potter")
else:
	print("<nome> nao eh patrono do Harry Potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    patrono = cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:47:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
patrono= "cervo"
if (nome==patrono):
	print("cervo eh patrono do Harry Potter")
else:
	print("<nome> nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:48:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
patrono= "cervo"
if (nome==patrono):
	print("cervo eh patrono do Harry Potter")
else:
	print(nome + "pato nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:48:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
patrono= "cervo"
if (nome==patrono):
	print("cervo eh patrono do Harry Potter")
else:
	print(nome + "nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 18:48:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
patrono= "cervo"
if (nome==patrono):
	print("cervo eh patrono do Harry Potter")
else:
	print(nome + "nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.162718
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:49:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
patrono= "cervo"
if (nome==patrono):
	print("cervo eh patrono do harry potter")
else:
	print(nome + "nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:49:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
patrono= "cervo"
if (nome==patrono):
	print("cervo eh patrono do harry potter")
else:
	print(nome +" " "nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 18:49:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
patrono= "cervo"
if (nome==patrono):
	print("cervo eh patrono do harry potter")
else:
	print(nome +" " "nao eh patrono do harry potter")
-- EXECUTION TIME:
0.125252
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:50:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
patrono= "cervo"
if (nome==patrono):
	print("cervo eh patrono do harry potter")
else:
	print(nome +" " "nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 18:50:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
patrono= "cervo"
if (nome==patrono):
	print("cervo eh patrono do harry potter")
else:
	print(nome +" " "nao eh patrono do harry potter")
-- EXECUTION TIME:
0.137223
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:51:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
patrono= "cervo"
if (nome==patrono):
	print("cervo eh patrono do harry potter")
else:
	print(nome +" " "nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 18:51:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
patrono= "cervo"
if (nome==patrono):
	print("cervo eh patrono do harry potter")
else:
	print(nome +" " "nao eh patrono do harry potter")
-- EXECUTION TIME:
0.13475
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:54:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
patrono= "cervo"
if (nome==patrono) :
	print("cervo eh patrono do harry potter")
else :
	print(nome +" " "nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 18:54:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
patrono= "cervo"
if (nome==patrono) :
	print("cervo eh patrono do harry potter")
else :
	print(nome +" " "nao eh patrono do harry potter")
-- EXECUTION TIME:
0.154184
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:55:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
patrono= "cervo"
if (nome==patrono) :
	print("cervo eh patrono do harry potter")
else :
	print(  nome +" " "nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 18:55:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
patrono= "cervo"
if (nome==patrono) :
	print("cervo eh patrono do harry potter")
else :
	print(  nome +" " "nao eh patrono do harry potter")
-- EXECUTION TIME:
0.181784
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:56:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
patrono= "cervo"
if (nome==patrono) :
	print("cervo eh patrono do harry potter")
else :
	print(  nome +" " "nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 18:56:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
patrono= "cervo"
if (nome==patrono) :
	print("cervo eh patrono do harry potter")
else :
	print(  nome +" " "nao eh patrono do harry potter")
-- EXECUTION TIME:
0.128434
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:00:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
patrono=cervo
if (nome==patrono) :
	print("cervo eh patrono do harry potter")
else :
	print(  nome +" " "nao eh patrono do harry potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    patrono=cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:00:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
if (nome=="cervo") :
	print("cervo eh patrono do harry potter")
else :
	print(  nome +" " "nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 19:00:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
if (nome=="cervo") :
	print("cervo eh patrono do harry potter")
else :
	print(  nome +" " "nao eh patrono do harry potter")
-- EXECUTION TIME:
0.128852
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:00:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
if (nome=="cervo") :
	print("cervo eh patrono do harry potter")
else :
	print(  nome +" " "nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:04:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
if (nome=="cervo") :
	resp="cervo eh patrono do harry potter"
else :
	resp="nao eh patrono do harry potter"
mens=nome+resp
print(mens)
-- OUTPUT:
cervocervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:04:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
if (nome=="cervo") :
	resp="cervo eh patrono do harry potter"
else :
	resp="nao eh patrono do harry potter"
mens=nome + resp
print(mens)
-- OUTPUT:
cervocervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:04:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
if (nome=="cervo") :
	resp="cervo eh patrono do harry potter"
else :
	resp="nao eh patrono do harry potter"
mens=nome+" "+resp
print(mens)
-- OUTPUT:
cervo cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 19:05:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
if (nome=="cervo") :
	resp="cervo eh patrono do harry potter"
else :
	resp="nao eh patrono do harry potter"
mens=nome+" "+resp
print(mens)
-- EXECUTION TIME:
0.146961
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:05:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
if (nome=="cervo") :
	resp="cervo eh patrono do Harry Potter"
else :
	resp="nao eh patrono do Harry Potter"
mens=nome+" "+resp
print(mens)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:05:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
if (nome=="cervo") :
	resp="cervo eh patrono do Harry Potter"
else :
	resp="nao eh patrono do Harry Potter"
mens=nome+" "+resp
print(mens)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 19:05:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
if (nome=="cervo") :
	resp="cervo eh patrono do Harry Potter"
else :
	resp="nao eh patrono do Harry Potter"
mens=nome+" "+resp
print(mens)
-- EXECUTION TIME:
0.162697
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:05:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
if (nome=="cervo") :
	resp="cervo eh patrono do Harry Potter"
else :
	resp="nao eh patrono do Harry Potter"
mens=nome+" "+resp
print(mens)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:06:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
if (nome=="cervo") :
	resp="cervo eh patrono do Harry Potter"
else :
	resp="nao eh patrono do Harry Potter"
mens=nome+" "+resp
print(mens)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:07:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
if (nome=="cervo") :
	resp="eh patrono do Harry Potter"
else :
	resp="nao eh patrono do Harry Potter"
mens=nome+" "+resp
print(mens)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 19:07:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("nome")
if (nome=="cervo") :
	resp="eh patrono do Harry Potter"
else :
	resp="nao eh patrono do Harry Potter"
mens=nome+" "+resp
print(mens)
-- EXECUTION TIME:
0.128961
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:49:52) 
-- CODE:
nome=input("nome")
if(nome==cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("nome "" nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.141828
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1053/main.py", line 2, in <module>
    if(nome==cervo):
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:50:19) 
-- CODE:
nome=input("nome")
if(nome==cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(nome " " "nao eh patrono do Harry Potter")
-- ERROR:
File "XXXX", line 5
    print(nome " " "nao eh patrono do Harry Potter")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:50:37) 
-- CODE:
nome=input("nome")
if(nome==cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print( nome " " "nao eh patrono do Harry Potter")
-- ERROR:
File "XXXX", line 5
    print( nome " " "nao eh patrono do Harry Potter")
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:51:24) 
-- CODE:
nome=input("nome")
if(nome==cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print( <nome> " " "nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.138393
-- ERROR:
  File "/home/codebench/codes/1649/1053/main.py", line 5
    print( <nome> " " "nao eh patrono do Harry Potter")
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:51:25) 
-- CODE:
nome=input("nome")
if(nome==cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print( <nome> " " "nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.14323
-- ERROR:
  File "/home/codebench/codes/1649/1053/main.py", line 5
    print( <nome> " " "nao eh patrono do Harry Potter")
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:51:25) 
-- CODE:
nome=input("nome")
if(nome==cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print( <nome> " " "nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.253788
-- ERROR:
  File "/home/codebench/codes/1649/1053/main.py", line 5
    print( <nome> " " "nao eh patrono do Harry Potter")
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:51:25) 
-- CODE:
nome=input("nome")
if(nome==cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print( <nome> " " "nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.171675
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1649/1053/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:51:46) 
-- CODE:
nome=input("nome")
if(nome==cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("nome" " " "nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.167013
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1053/main.py", line 2, in <module>
    if(nome==cervo):
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:51:48) 
-- CODE:
nome=input("nome")
if(nome==cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("nome" " " "nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.227031
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1053/main.py", line 2, in <module>
    if(nome==cervo):
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:51:48) 
-- CODE:
nome=input("nome")
if(nome==cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("nome" " " "nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.149358
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1053/main.py", line 2, in <module>
    if(nome==cervo):
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:51:48) 
-- CODE:
nome=input("nome")
if(nome==cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("nome" " " "nao eh patrono do Harry Potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(nome==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:51:48) 
-- CODE:
nome=input("nome")
if(nome==cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("nome" " " "nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.264317
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1649/1053/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:51:48) 
-- CODE:
nome=input("nome")
if(nome==cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("nome" " " "nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.302374
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1649/1053/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:52:01) 
-- CODE:
nome=input("nome")
if(nome=="cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print("nome" " " "nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.166922
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nome nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:52:03) 
-- CODE:
nome=input("nome")
if(nome=="cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print("nome" " " "nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:52:08) 
-- CODE:
nome=input("nome")
if(nome=="cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print("nome" " " "nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.129017
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nome nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:52:41) 
-- CODE:
nome=input("nome")
if(nome=="cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print (nome),(" " "nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.195615
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:52:42) 
-- CODE:
nome=input("nome")
if(nome=="cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print (nome),(" " "nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:53:45) 
-- CODE:
nome=input("nome")
if(nome=="cervo"):
	msn="cervo eh patrono do Harry Potter"
else:
	msn= nome+" "+"nao eh patrono do Harry Potter"
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:54:07) 
-- CODE:
nome=input("nome")
if(nome=="cervo"):
	msn="cervo eh patrono do Harry Potter"
else:
	msn= nome + " " + "nao eh patrono do Harry Potter"
print(msn)	
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:54:12) 
-- CODE:
nome=input("nome")
if(nome=="cervo"):
	msn="cervo eh patrono do Harry Potter"
else:
	msn= nome + " " + "nao eh patrono do Harry Potter"
print(msn)	
-- EXECUTION TIME:
0.191467
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
